// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "email": "tester@robertmanager.net",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "group": "administration",
      "id": 1,
      "last_name": "Fountain",
      "phone": null,
      "pseudo": "test1",
    },
    {
      "email": "tester2@robertmanager.net",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "group": "management",
      "id": 2,
      "last_name": "Rabbit",
      "phone": null,
      "pseudo": "test2",
    },
    {
      "email": "nobody@robertmanager.net",
      "first_name": "?",
      "full_name": "?",
      "group": "management",
      "id": 3,
      "last_name": "?",
      "phone": null,
      "pseudo": "nobody",
    },
    {
      "email": "visitor@robertmanager.net",
      "first_name": "Henry",
      "full_name": "Henry Berluc",
      "group": "readonly-planning-general",
      "id": 4,
      "last_name": "Berluc",
      "phone": "+33724000000",
      "pseudo": "TheVisitor",
    },
    {
      "email": "external@robertmanager.net",
      "first_name": "Caroline",
      "full_name": "Caroline Farol",
      "group": "readonly-planning-general",
      "id": 5,
      "last_name": "Farol",
      "phone": "+33786325500",
      "pseudo": "caroline",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 5,
    "total": {
      "items": 5,
      "pages": 1,
    },
  },
}
`;

exports[`Users Api create() parse the returned data correctly (with #1) 1`] = `
{
  "country": {
    "code": "FR",
    "id": 1,
    "name": "France",
  },
  "country_id": 1,
  "email": "tester@robertmanager.net",
  "first_name": "Jean",
  "full_address": "1, somewhere av.
1234 Megacity",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "1234",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api create() parse the returned data correctly (with #2) 1`] = `
{
  "country": null,
  "country_id": null,
  "email": "tester2@robertmanager.net",
  "first_name": "Roger",
  "full_address": null,
  "full_name": "Roger Rabbit",
  "group": "management",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api create() parse the returned data correctly (with #3) 1`] = `
{
  "country": null,
  "country_id": null,
  "email": "nobody@robertmanager.net",
  "first_name": "?",
  "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "full_name": "?",
  "group": "management",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api create() parse the returned data correctly (with #4) 1`] = `
{
  "country": {
    "code": "CH",
    "id": 2,
    "name": "Suisse",
  },
  "country_id": 2,
  "email": "visitor@robertmanager.net",
  "first_name": "Henry",
  "full_address": null,
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": "+33724000000",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api create() parse the returned data correctly (with #5) 1`] = `
{
  "country": null,
  "country_id": null,
  "email": "external@robertmanager.net",
  "first_name": "Caroline",
  "full_address": null,
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api getSettings() parse the returned data correctly 1`] = `
{
  "default_bookings_view": "calendar",
  "language": "en",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 2`] = `
{
  "default_bookings_view": "calendar",
  "language": "en",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 3`] = `
{
  "default_bookings_view": "calendar",
  "language": "fr",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 4`] = `
{
  "default_bookings_view": "listing",
  "language": "fr",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 5`] = `
{
  "default_bookings_view": "calendar",
  "language": "fr",
}
`;

exports[`Users Api getSettings() parse the returned data correctly 6`] = `
{
  "default_bookings_view": "calendar",
  "language": "en",
}
`;

exports[`Users Api one() parse the returned data correctly 1`] = `
{
  "country": {
    "code": "FR",
    "id": 1,
    "name": "France",
  },
  "country_id": 1,
  "email": "tester@robertmanager.net",
  "first_name": "Jean",
  "full_address": "1, somewhere av.
1234 Megacity",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "1234",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api one() parse the returned data correctly 2`] = `
{
  "country": {
    "code": "FR",
    "id": 1,
    "name": "France",
  },
  "country_id": 1,
  "email": "tester@robertmanager.net",
  "first_name": "Jean",
  "full_address": "1, somewhere av.
1234 Megacity",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "1234",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api one() parse the returned data correctly 3`] = `
{
  "country": null,
  "country_id": null,
  "email": "tester2@robertmanager.net",
  "first_name": "Roger",
  "full_address": null,
  "full_name": "Roger Rabbit",
  "group": "management",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api one() parse the returned data correctly 4`] = `
{
  "country": null,
  "country_id": null,
  "email": "nobody@robertmanager.net",
  "first_name": "?",
  "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "full_name": "?",
  "group": "management",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api one() parse the returned data correctly 5`] = `
{
  "country": {
    "code": "CH",
    "id": 2,
    "name": "Suisse",
  },
  "country_id": 2,
  "email": "visitor@robertmanager.net",
  "first_name": "Henry",
  "full_address": null,
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": "+33724000000",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api one() parse the returned data correctly 6`] = `
{
  "country": null,
  "country_id": null,
  "email": "external@robertmanager.net",
  "first_name": "Caroline",
  "full_address": null,
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api restore() parse the returned data correctly (with #1) 1`] = `
{
  "country": {
    "code": "FR",
    "id": 1,
    "name": "France",
  },
  "country_id": 1,
  "email": "tester@robertmanager.net",
  "first_name": "Jean",
  "full_address": "1, somewhere av.
1234 Megacity",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "1234",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api restore() parse the returned data correctly (with #2) 1`] = `
{
  "country": null,
  "country_id": null,
  "email": "tester2@robertmanager.net",
  "first_name": "Roger",
  "full_address": null,
  "full_name": "Roger Rabbit",
  "group": "management",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api restore() parse the returned data correctly (with #3) 1`] = `
{
  "country": null,
  "country_id": null,
  "email": "nobody@robertmanager.net",
  "first_name": "?",
  "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "full_name": "?",
  "group": "management",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api restore() parse the returned data correctly (with #4) 1`] = `
{
  "country": {
    "code": "CH",
    "id": 2,
    "name": "Suisse",
  },
  "country_id": 2,
  "email": "visitor@robertmanager.net",
  "first_name": "Henry",
  "full_address": null,
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": "+33724000000",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api restore() parse the returned data correctly (with #5) 1`] = `
{
  "country": null,
  "country_id": null,
  "email": "external@robertmanager.net",
  "first_name": "Caroline",
  "full_address": null,
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api update() parse the returned data correctly 1`] = `
{
  "country": {
    "code": "FR",
    "id": 1,
    "name": "France",
  },
  "country_id": 1,
  "email": "tester@robertmanager.net",
  "first_name": "Jean",
  "full_address": "1, somewhere av.
1234 Megacity",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "1234",
  "pseudo": "test1",
  "street": "1, somewhere av.",
}
`;

exports[`Users Api update() parse the returned data correctly 2`] = `
{
  "country": null,
  "country_id": null,
  "email": "tester2@robertmanager.net",
  "first_name": "Roger",
  "full_address": null,
  "full_name": "Roger Rabbit",
  "group": "management",
  "id": 2,
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
}
`;

exports[`Users Api update() parse the returned data correctly 3`] = `
{
  "country": null,
  "country_id": null,
  "email": "nobody@robertmanager.net",
  "first_name": "?",
  "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "full_name": "?",
  "group": "management",
  "id": 3,
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
}
`;

exports[`Users Api update() parse the returned data correctly 4`] = `
{
  "country": {
    "code": "CH",
    "id": 2,
    "name": "Suisse",
  },
  "country_id": 2,
  "email": "visitor@robertmanager.net",
  "first_name": "Henry",
  "full_address": null,
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "last_name": "Berluc",
  "locality": null,
  "phone": "+33724000000",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
}
`;

exports[`Users Api update() parse the returned data correctly 5`] = `
{
  "country": null,
  "country_id": null,
  "email": "external@robertmanager.net",
  "first_name": "Caroline",
  "full_address": null,
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "last_name": "Farol",
  "locality": null,
  "phone": "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 1`] = `
{
  "default_bookings_view": "calendar",
  "language": "en",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 2`] = `
{
  "default_bookings_view": "calendar",
  "language": "en",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 3`] = `
{
  "default_bookings_view": "calendar",
  "language": "fr",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 4`] = `
{
  "default_bookings_view": "listing",
  "language": "fr",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 5`] = `
{
  "default_bookings_view": "calendar",
  "language": "fr",
}
`;

exports[`Users Api updateSettings() parse the returned data correctly 6`] = `
{
  "default_bookings_view": "calendar",
  "language": "en",
}
`;
